<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings">

    <LinearLayout
        android:id="@+id/settingsTopMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark_color"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settingsMenuNowIsPlaying"
            android:layout_width="@dimen/zerodp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/one"
            android:backgroundTint="@color/category_now_is_playing"
            android:elevation="@dimen/tendp"
            android:text="@string/now_is_playing_name"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/settingsMenuAlbums"
            android:layout_width="@dimen/zerodp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/one"
            android:backgroundTint="@color/category_albums"
            android:elevation="@dimen/tendp"
            android:text="@string/albums_name"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/settingsMenuArtist"
            android:layout_width="@dimen/zerodp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/one"
            android:backgroundTint="@color/category_artists"
            android:elevation="@dimen/tendp"
            android:text="@string/artist_name"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/settingsMenuMusicStore"
            android:layout_width="@dimen/zerodp"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/one"
            android:backgroundTint="@color/category_music_store"
            android:elevation="@dimen/tendp"
            android:text="@string/music_store_name"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/little_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/spotify" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/little_margin"
                android:layout_marginRight="@dimen/little_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/hundreddp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/e_mail_login_spotify_settings"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fifteensp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/spotifyEmailAddress"
                    android:layout_width="@dimen/zerodp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="@dimen/one"
                    android:ems="@dimen/ten"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/little_margin"
                android:layout_marginRight="@dimen/little_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/hundreddp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/password_spotify_settings"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fifteensp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/spotifyPassword"
                    android:layout_width="@dimen/zerodp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="@dimen/one"
                    android:ems="@dimen/ten"
                    android:inputType="textPassword" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/little_margin"
                    android:layout_marginRight="@dimen/little_margin"
                    android:layout_marginTop="@dimen/twentydp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonRegister"
                        android:layout_width="@dimen/zerodp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/one"
                        android:backgroundTint="@color/primary_color"
                        android:drawableLeft="@drawable/ic_person_add_white_18dp"
                        android:elevation="@dimen/tendp"
                        android:text="@string/register_spotify_button_name"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/buttonLogin"
                        android:layout_width="@dimen/zerodp"
                        android:layout_height="wrap_content"
                        android:layout_weight="@dimen/one"
                        android:backgroundTint="@color/category_albums"
                        android:drawableLeft="@drawable/ic_vpn_key_white_18dp"
                        android:elevation="@dimen/tendp"
                        android:text="@string/login_spotify_button_name"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                </LinearLayout>

                <Button
                    android:id="@+id/loginViaFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/little_margin"
                    android:layout_marginRight="@dimen/little_margin"
                    android:backgroundTint="@color/category_settings"
                    android:text="@string/login_via_facebook_settings_button_name"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/loginViaGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/little_margin"
                    android:layout_marginRight="@dimen/little_margin"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:text="@string/login_via_google_settings_button_name"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fivedp"
                android:padding="@dimen/little_margin"
                android:text="@string/settings_screen_description"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fifteensp" />

        </ScrollView>
    </LinearLayout>
</LinearLayout>